<resources>
    <string name="app_name">Run Up</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading...</string>
    <string name="app_id">977360645681607</string>
    <string name="str_back_one_more_end">Pressing once more will be terminated.</string>
    <string name="ok">Ok</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="email_add">Email</string>
    <string name="username">User Name</string>
    <string name="givenname">Given Name</string>
    <string name="phone">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="birth">Date of Birth</string>
    <string name="marital">Marital State</string>
    <string name="address">Address</string>
    <string name="email_check">Please input Vaild email.</string>
    <string name="password">Password</string>
    <string name="sign_in">Login</string>
    <string name="facebook">Sign in with Facebook</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="sign_up">Register</string>
    <string name="google">Sign in with Google</string>
    <string name="inputEmail">Please enter your Email.</string>
    <string name="inputPass">Please enter your Password.</string>
    <string name="inputPassConf">Please enter your Password again.</string>
    <string name="checkPass">Please enter your correct Password.</string>
    <string name="passlength">Please enter at least 6 characters.</string>
    <string name="camera">Camera</string>
    <string name="album">Album</string>
    <string name="cancel">Cancel</string>
    <string name="new_here">&lt;u>New here? Sign Up&lt;/u></string>
    <string name="confrim_password">Confirm Password</string>
    <string name="msg_location_service_enable_confirm">Will you turn on the location service?</string>
    <string name="email_exist">Email is already exist!</string>
    <string name="error">Error!</string>
    <string name="register_fail">Registration failed.</string>
    <string name="login_fail">Login Failed.</string>
    <string name="warning">Warning</string>
</resources>
