<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@mipmap/bg_pop"
    android:layout_gravity="center"
    android:id="@+id/lyt_alert_photo_select">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="24dp"
        android:background="@color/border"/>

    <TextView
        android:id="@+id/txv_album"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/album"
        android:textColor="@color/gray_800"
        android:textSize="15sp"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"/>

    <TextView
        android:id="@+id/txv_camera"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/camera"
        android:textColor="@color/gray_800"
        android:textSize="15sp"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"/>

    <Button
        android:id="@+id/btn_alertCancel"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginBottom="20dp"/>


</LinearLayout>